# knight

./: .gitignore
backend/: bdxhsapi.py  wxxhsapi.py
backend/django/yurnero/: manage.py  requirement.txt  settings.py  setup.cfg  setup.py  uwsgi.ini
backend/django/yurnero/yurnero/: __init__.py  apps.py  asgi.py  db.sqlite3  urls.py  wsgi.py
backend/django/yurnero/yurnero/api/: admin.py
backend/django/yurnero/yurnero/api/endpoints/: __init__.py  urls.py
backend/django/yurnero/yurnero/api/endpoints/xhs/: __init__.py  note.py
backend/django/yurnero/yurnero/business/: xhs.py
backend/django/yurnero/yurnero/conf/: mysql_client.conf  settings.py
backend/django/yurnero/yurnero/core/: code.py  endpoint.py  response.py  schema.py
backend/django/yurnero/yurnero/utils/: wxxhsapi.py
deployment/compose/: docker-compose.yml
deployment/compose/emqx/: Dockerfile
deployment/compose/env/: app  emqx  mongo  mqtt  mysql  zmq
deployment/compose/knight/: Dockerfile
deployment/compose/mysql/: Dockerfile
deployment/compose/mysql/conf/mysql.conf.d/: mysqld.cnf
deployment/compose/mysql/docker-entrypoint-initdb.d/: db_init.sh
deployment/compose/nginx/: nginx.conf
deployment/compose/nginx/conf.d/: knight.conf
deployment/docker/: daemon.json  network.sh
deployment/docker/images/: pull.sh  save.sh
deployment/docker/images/knight/: Dockerfile  requirements.txt
deployment/docker/images/ntp/: Dockerfile  Dockerfile2  docker-compose.yml  run.sh  vars
deployment/docker/images/ntp/conf/chrony/: chrony.conf
deployment/docker/images/ntp/scripts/: entrypoint.sh
(+2 files in other folders)
