[metadata]
name = yurnero
version = 0.1
summary = monitor win file
description-file = README.md
author = vallee

[files]
packages = 
	yurnero
data_files = 
	etc/yurnero=

[global]
setup-hooks = pbr.hooks.setup_hook

[entry_points]

[build_sphinx]
#all_files = 1
#build-dir = doc/build
#source-dir = doc/source

[extract_messages]

[compile_catalog]

[update_catalog]

[wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

